--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -182,37 +182,6 @@ body {
 		width: 70em;
 	}
 
-    @media screen and (max-width: 1680px) {
-
-			.container {
-				width: 68em;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			.container {
-				width: calc(100% - 80px);
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.container {
-				width: calc(100% - 100px);
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.container {
-				width: calc(100% - 40px);
-			}
-
-		}
 /* --------------- MAIN ------------------  */
 
 #main {
@@ -294,13 +263,14 @@ body {
 .social-media .details {
     position: relative;
     display: block;
-    left: 3.5em;
+    left: 4.7em;
 }
 
 #main .social-media .icon.icons {
     list-style: none;
     position: relative;
-    left: 3.4em;
+    left: 4.6em;
+    text-align: center;
 }
 
 /* #main .social-media .icon {
@@ -404,7 +374,7 @@ body {
 #main .form {
     position: relative;
     display: inline-block;
-    text-align: center;
+    text-align: end;
 }
 
 #main .form form {
@@ -505,4 +475,461 @@ body {
     right: 0;
     font-size: 44px;
     color: #d4d4d4;
+}
+
+/* Laptops */
+@media only screen and (max-width: 1215px) {
+    #main {
+        padding: 4em 0;
+    }
+    #main .contact-header {
+        margin: 0 auto;
+        padding-bottom: 1em;
+    }
+    #main .info-area-top {
+        display: flex;
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 3.5em;
+    }
+    #main .info-area-bottom {
+        width: 90%;
+        margin: 0 auto;
+    }
+    #main .flex-child.location iframe {
+        width: 25.5em;
+        height: 380px;
+    }
+    #main .form .form-list li {
+        text-align: center;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 25.5em;
+    }
+    #main .form .form-list li textarea {
+        width: 25.5em;
+    }
+}
+@media only screen and (max-width: 1130px) {
+    #main .info-area-top {
+        display: flex;
+        width: 86%;
+        margin: 0 auto;
+        margin-bottom: 3.5em;
+    }
+    #main .social-media .icon.icons, #main .social-media .icon.details {
+        left: 0;
+    }
+    #main .info-area-top .flex-child.social-media {
+        justify-content: flex-end;
+    }
+    #main .info-area-bottom {
+        flex-direction: column;
+        width: 90%;
+        margin: 0 auto;
+    }
+    #main .info-area-bottom .flex-child.location {
+        order: 2;
+        margin: 0 auto;
+        padding-top: 3em;
+    }
+    #main .form form {
+        padding: 0;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 35em;
+    }
+    #main .form .form-list li textarea {
+        width: 35em;
+        max-width: 40em;
+    }
+    #main .flex-child.location iframe {
+        /* width: 953px; */
+        width: 35em;
+        max-width: 40em;
+        height: 35em;
+    }
+    /* #main .social-media .icon.icons {
+        left: 5.7em;
+    }
+    #main .social-media .details {
+        left: 5.7em;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 23em;
+    }
+    #main .form .form-list li textarea {
+        width: 23em;
+    } */
+}
+@media only screen and (min-width: 1024px) {
+    #check, .checkBtn {
+        display: none;
+    }
+}
+
+/* Tablets */
+@media only screen and (max-width: 1023px) {
+    #header .nav-area .flex-nav .top-nav {
+        display: none;
+        /* width: 0; */
+    }
+    .top-nav ul li a {
+        display: none;
+        padding: 0;
+        margin: 0 auto;
+    }
+    .top-nav ul li span {
+        display: none;
+    }
+    #header .nav-area .bottom-nav {
+        display: inline-block;
+        width: 100%;
+    }
+    .bottom-nav .left-logo {
+        float: left;
+        position: relative;
+        right: 20px;
+        /* display: contents; */
+    }
+    .flex-nav .bottom-nav .mn-nav {
+        border-top: none;
+        flex: none !important;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -110% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 80px !important;
+        margin: 50px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    .master-nav li a:hover {
+        background: none !important;
+        color: rgb(59, 42, 39) !important;
+    }
+    .checkBtn {
+        font-size: 30px;
+        color: whitesmoke;
+        float: right;
+        line-height: 80px;
+        margin-right: 40px;
+        cursor: pointer;
+        z-index: 10;
+    }
+    #check {
+        display: none;
+    }
+    #check:checked ~ .mn-nav.options ul {
+        right: 0 !important;
+    }
+    #main .store-info .icons ul li {
+        font-size: 1.6em;
+        margin: 25px 0;
+    }
+    #main .store-info .details ul li {
+        font-size: 1.2em;
+    }
+    #main .social-media .icons ul li {
+        font-size: 1.6em;
+    }
+    #main .social-media .details ul li {
+        font-size: 1.2em;
+        margin: 30px 0;
+    }
+    #main .store-info .details ul li:nth-child(1) {
+        margin: 25px 0 20px;
+    }
+    #main .store-info .details ul li:nth-child(3) {
+        margin-top: 30px;
+    }
+    #footer {
+        padding: 5px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 25px;
+        font-size: 15px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 40px;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    #main {
+        padding: 3em 0 6em;
+    }
+    #main .info-area-top {
+        display: block;
+    }
+    #main .store-info {
+        display: flex;
+        margin: 0 auto;
+        width: 34.3em;
+    }
+    #main .info-area-top .flex-child.social-media {
+        justify-content: start;
+        width: 34em;
+        margin: 0 auto;
+    }
+    #main .store-info .icons ul li {
+        font-size: 1.6em;
+        margin: 25px 0;
+    }
+    #main .store-info .details ul li {
+        font-size: 1.2em;
+    }
+    #main .social-media .details ul {
+        padding-left: 42px;
+        /* left: 1em; */
+    }
+    #main .social-media .icons ul li {
+        font-size: 1.6em;
+    }
+    #main .social-media .details ul li {
+        font-size: 1.2em;
+        margin: 30px 0;
+    }
+    #main .store-info .details ul li:nth-child(1) {
+        margin: 25px 0 20px;
+    }
+    #main .store-info .details ul li:nth-child(3) {
+        margin-top: 30px;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 34em;
+        height: 2.2em;
+    }
+    #main .form .form-list li textarea {
+        width: 34em;
+        height: 12em;
+        max-width: 40em;
+    }
+    #main .flex-child.location iframe {
+        /* width: 953px; */
+        width: 35em;
+        max-width: 40em;
+        height: 35em;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        /* font-size: 14px; */
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 35px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #main {
+        padding: 3em 0 6em;
+    }
+    #main .info-area-top {
+        display: block;
+    }
+    #main .store-info {
+        display: flex;
+        margin: 0 auto;
+        width: 30em;
+    }
+    #main .info-area-top .flex-child.social-media {
+        justify-content: start;
+        width: 30em;
+        margin: 0 auto;
+    }
+    #main .store-info .icons ul li {
+        font-size: 1.6em;
+        margin: 25px 0;
+    }
+    #main .store-info .details ul li {
+        font-size: 1.2em;
+    }
+    #main .social-media .details ul {
+        padding-left: 42px;
+        /* left: 1em; */
+    }
+    #main .social-media .icons ul li {
+        font-size: 1.6em;
+    }
+    #main .social-media .details ul li {
+        font-size: 1.2em;
+        margin: 30px 0;
+    }
+    #main .store-info .details ul li:nth-child(1) {
+        margin: 25px 0 20px;
+    }
+    #main .store-info .details ul li:nth-child(3) {
+        margin-top: 30px;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 30em;
+        height: 2.2em;
+    }
+    #main .form .form-list li textarea {
+        width: 30em;
+        height: 12em;
+        max-width: 40em;
+    }
+    #main .flex-child.location iframe {
+        /* width: 953px; */
+        width: 30em;
+        max-width: 40em;
+        height: 35em;
+    }
+    .bottom-nav .mn-nav .site-logo {
+        top: 8px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 2.1rem;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        font-size: 13.8px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #main {
+        padding: 3em 0 6em;
+    }
+    #main .contact-header {
+        font-size: 2em;
+    }
+    #main .info-area-top {
+        display: block;
+    }
+    #main .store-info {
+        display: flex;
+        margin: 0 auto;
+        width: 24em;
+    }
+    #main .info-area-top .flex-child.social-media {
+        justify-content: start;
+        width: 24em;
+        margin: 0 auto;
+    }
+    #main .store-info .icons ul li {
+        font-size: 1.3em;
+        margin: 25px 0;
+    }
+    #main .store-info .details ul li {
+        font-size: 1.05em;
+    }
+    #main .social-media .details ul {
+        padding-left: 42px;
+        /* left: 1em; */
+    }
+    #main .social-media .icons ul li {
+        font-size: 1.3em;
+    }
+    #main .social-media .details ul li:nth-child(1) {
+        font-size: 1.05em;
+        margin: 30px 0 0px;
+    }
+    #main .social-media .details ul li:nth-child(2) {
+        font-size: 1.05em;
+        margin: 25px 0 0px;
+    }
+    #main .social-media .details ul li:nth-child(3) {
+        font-size: 1.05em;
+        margin: 25px 0 0px;
+    }
+    #main .store-info .details ul li:nth-child(1) {
+        margin: 25px 0 0px;
+    }
+    #main .store-info .details ul li:nth-child(3) {
+        margin-top: 27px;
+    }
+    #main .form .form-list li .name, #main .form .form-list li .email {
+        width: 24em;
+        height: 2.2em;
+    }
+    #main .form .form-list li textarea {
+        width: 24em;
+        height: 12em;
+        max-width: 40em;
+    }
+    #main .flex-child.location iframe {
+        /* width: 953px; */
+        width: 24em;
+        max-width: 40em;
+        height: 35em;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .checkBtn {
+        font-size: 24px;
+    }
+    .bottom-nav .mn-nav .site-logo {
+        top: 15px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 1.7rem;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -120% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 60px !important;
+        margin: 40px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 22px;
+        font-size: 13px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    #footer {
+        padding: 0px 9px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 20px;
+        font-size: 10px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 13px;
+    }
 }
