--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -37,14 +37,10 @@ body {
     #header .nav-area .flex-nav .top-nav {
         display: inline-block;
         position: relative;
-        /* border: 1px solid brown; */
-        /* right: -6em; */
         margin: 10px 20px 10px 0;
-        /* padding: 0; */
     }
 
     #header .nav-area .flex-nav .top-nav ul {
-        /* border: 1px solid floralwhite; */
         display: inline-block;
         position: relative;
         margin: 0 auto;
@@ -181,37 +177,6 @@ body {
 		max-width: 100%;
 		width: 70em;
 	}
-
-    @media screen and (max-width: 1680px) {
-
-			.container {
-				width: 68em;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			.container {
-				width: calc(100% - 80px);
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.container {
-				width: calc(100% - 100px);
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.container {
-				width: calc(100% - 40px);
-			}
-		}
 
 #logo{
     background: lightcoral;
@@ -692,7 +657,7 @@ body {
     border-radius: 2px;
 }
 
-/* --------------- Footer ------------------ */
+/* --------------- Start of Footer ------------------ */
 
 #footer {
     /* Try to reduce the padding-bottom from the footer top=21 bottom=28px */
@@ -729,4 +694,621 @@ body {
     right: 0;
     font-size: 44px;
     color: #d4d4d4;
+}
+
+/* Laptops */
+@media only screen and (max-width: 1215px) {
+}
+
+@media only screen and (max-width: 1200px){
+    #form .flex-container {
+        display: block;
+        position: relative;
+    }
+    #form .flex-container .flex-child {
+        position: relative;
+        text-align: start;
+        justify-content: center;
+    }
+    #form .flex-container .flex-child.info {
+        width: 34rem;
+        margin: 0 auto;
+        padding: 0;
+    }
+    #form .flex-child.form {
+        position: relative;
+        display: block;
+        text-align: center;
+    }
+    #form .form form {
+        padding-left: 0;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        /* font-size: 1rem; */
+        width: 35rem;
+        /* color: white; */
+    }
+    #form .form .form-list li .message{
+        width: 35rem !important;
+        height: 14em;
+        max-width: 600px;
+        /* font-family: 'Mada'; */
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    #check, .checkBtn {
+        display: none;
+    }
+}
+
+/* Tablets */
+@media only screen and (max-width: 1023px) {
+    #header .nav-area .flex-nav .top-nav {
+        display: none;
+        /* width: 0; */
+    }
+    .top-nav ul li a {
+        display: none;
+        padding: 0;
+        margin: 0 auto;
+    }
+    .top-nav ul li span {
+        display: none;
+    }
+    #header .nav-area .bottom-nav {
+        display: inline-block;
+        width: 100%;
+    }
+    .bottom-nav .left-logo {
+        float: left;
+        position: relative;
+        right: 20px;
+        /* display: contents; */
+    }
+    .flex-nav .bottom-nav .mn-nav {
+        border-top: none;
+        flex: none !important;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -110% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 80px !important;
+        margin: 50px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    .master-nav li a:hover {
+        background: none !important;
+        color: rgb(59, 42, 39) !important;
+    }
+    .checkBtn {
+        font-size: 30px;
+        color: whitesmoke;
+        float: right;
+        line-height: 80px;
+        margin-right: 40px;
+        cursor: pointer;
+        z-index: 10;
+    }
+    #check {
+        display: none;
+    }
+    #check:checked ~ .mn-nav.options ul {
+        right: 0 !important;
+    }
+    #banner {
+        margin-top: 4em;
+    }
+    #banner p {
+        font-size: 1.6rem;
+    }
+    #features .specials h2 {
+        font-size: 2rem;
+    }
+    #features .col h3 {
+        font-size: 1.5em;
+    }
+    #features .col p {
+        font-size: 1.1em;
+    }
+    .image.featured {
+        min-width: 240px;
+        min-height: 285px;
+    }
+    .image img {
+        min-width: 240px;
+        min-height: 285px;
+    }
+    #footer {
+        padding: 5px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 25px;
+        font-size: 15px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 40px;
+    }
+}
+
+@media only screen and (max-width: 1000px){
+    .logo-span img {
+        width: 100%;
+        max-width: 340px;
+    }
+    #banner {
+        margin-top: 4em;
+    }
+    #banner p {
+        font-size: 1.5rem;
+    }
+    #features .specials h2 {
+        font-size: 2.1rem;
+    }
+    #features .col h3 {
+        font-size: 1.5em;
+    }
+    #features .col p {
+        font-size: 1.1em;
+    }
+    .image.featured {
+        min-width: 240px;
+        min-height: 285px;
+    }
+    .image img {
+        min-width: 240px;
+        min-height: 285px;
+    }
+    #testimonials {
+        padding: 6em 1em 3em;
+    }
+    #testimonials .container h2 {
+        font-size: 2rem;
+    }
+    #form {
+        padding: 5.5em 0 4em;
+    }
+    #form .form-header {
+        margin: 0 0 3em 0;
+    }
+    #form .form-header h1{
+        font-size: 2rem;
+        margin: 0 auto;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        /* font-size: 1rem; */
+        width: 33rem;
+        /* color: white; */
+    }
+    #form .form .form-list li textarea {
+        width: 32rem !important;
+        height: 14em;
+        max-width: 528px !important;
+        /* font-family: 'Mada'; */
+    }
+}
+
+@media only screen and (max-width: 900px){
+    #features .specials h2 {
+        font-size: 2rem;
+    }
+    #features .col h3 {
+        font-size: 1.5em;
+    }
+    #features .col p {
+        font-size: 1.1em;
+    }
+    .image.featured {
+        min-width: 210px;
+        min-height: 245px;
+    }
+    .image img {
+        min-width: 210px;
+        min-height: 245px;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        /* font-size: 14px; */
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 35px;
+    }
+}
+
+/* Mobile */
+@media only screen and (max-width: 768px) {
+    .bottom-nav .mn-nav .site-logo {
+        top: 8px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 2.1rem;
+    }
+    .logo-span img {
+        width: 100%;
+        max-width: 350px;
+    }
+    .logo-span p {
+        font-size: 1.7em;
+    }
+    #banner {
+        margin-top: 3em;
+    }
+    #banner p {
+        font-size: 1.45rem;
+        line-height: 30px;
+    }
+    #features .specials h2 {
+        font-size: 2.4rem;
+        margin: 1em 0 1.5em 0;
+    }
+    #features .row {
+        display: block;
+    }
+    .row .col {
+        width: 100%;
+        text-align: center;
+    }
+    .image.featured {
+        margin: 0 auto;
+        min-width: 265px;
+        min-height: 300px;
+    }
+    .image img {
+        min-width: 265px;
+        min-height: 300px;
+    }
+    #features .col header {
+        margin: 0em 0 -1em 0em;
+    }
+    #features .col p {
+        margin-bottom: 3rem;
+    }
+    #features .row .col section .st-3 {
+        margin-bottom: 0;
+    }
+    #testimonials {
+        padding: 6em 1em 4.5em 1rem;
+    }
+    #testimonials .container h2 {
+        font-size: 2.2rem;
+    }
+    #form .flex-container .flex-child.info {
+        width: 30rem;
+        margin: 0 auto;
+        padding: 0;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        /* font-size: 1rem; */
+        width: 30rem;
+        /* color: white; */
+    }
+    #form .form .form-list li .message{
+        width: 30rem !important;
+        height: 14em;
+        max-width: 600px;
+        /* font-family: 'Mada'; */
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        font-size: 13.8px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    #form .form-header h1 {
+        font-size: 1.6em;
+    }
+    #form .flex-container .flex-child.info {
+        width: 27.8rem;
+        margin: 0 auto;
+        padding: 0;
+    }
+    #form .info .icons ul li {
+        font-size: 1.7em;
+    }
+    #form .info .details ul li {
+        font-size: 1.2em;
+        margin: 0 auto;
+    }
+    #form .info .details ul li:nth-child(3) {
+        margin-top: 26px;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        /* font-size: 1rem; */
+        width: 27rem;
+        height: 2.5rem;
+        /* color: white; */
+    }
+    #form .form .form-list li .message{
+        width: 27rem !important;
+        height: 13em;
+        max-width: 600px;
+        /* font-family: 'Mada'; */
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .checkBtn {
+        font-size: 24px;
+    }
+    .bottom-nav .mn-nav .site-logo {
+        top: 15px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 1.7rem;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -120% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 60px !important;
+        margin: 40px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    .logo-span img {
+        width: 100%;
+        max-width: 290px;
+        margin-top: -4em;
+    }
+    .logo-span p {
+        margin-top: .5rem;
+        font-size: 1.25em;
+        letter-spacing: .2px;
+        line-height: 23px;
+    }
+    #banner {
+        margin-top: 1.8em;
+    }
+    #banner p {
+        font-size: 1.1rem;
+    }
+    #features .specials h2 {
+        font-size: 1.8rem;
+        margin: .8em 0 1.3em 0;
+    }
+    #features .row {
+        display: block;
+    }
+    .row .col {
+        width: 100%;
+        text-align: center;
+    }
+    .image.featured {
+        margin: 0 auto;
+        min-width: 235px;
+        min-height: 270px;
+    }
+    .image img {
+        min-width: 235px;
+        min-height: 270px;
+    }
+    #features .col header {
+        font-size: .9rem;
+        margin: -.5em 0 -1.1em 0em;
+    }
+    #features .col p {
+        font-size: 1.05rem;
+        margin-bottom: 3rem;
+    }
+    #features .row .col section .st-3 {
+        margin-bottom: 0;
+    }
+    #testimonials {
+        padding: 4.5em 1em 2em 1rem;
+    }
+    #testimonials .container h2 {
+        font-size: 1.7rem;
+    }
+    #form {
+        padding: 4.5em 0 3.5em;
+    }
+    #form .form-header {
+        margin: 0 0 2.5em 0;
+    }
+    #form .form-header h1{
+        font-size: 1.6rem;
+        padding: 0 1rem;
+        margin: 0 auto;
+    }
+    #form .flex-container .flex-child.info {
+        width: 22.5rem;
+        margin: 0 auto;
+        padding: 0;
+    }
+    #form .info .icons ul li {
+        font-size: 1.2em;
+    }
+    #form .flex-container .info .details ul {
+        padding-left : .8em;
+    }
+    #form .info .details ul li {
+        font-size: 1.01em;
+        margin: 0 auto;
+    }
+    #form .info .details ul li:nth-child(3) {
+        margin-top: 19px;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        width: 23rem;
+        height: 2.1em;
+    }
+    #form .form .form-list li textarea {
+        width: 23rem !important;
+        height: 13em;
+        max-width: 368px !important;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 22px;
+        font-size: 13px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .logo-span img{
+        width: 100%;
+        max-width: 200px;
+        margin-top: -5em;
+    }
+    .logo-span p {
+        font-size: 1rem;
+        line-height: 19px;
+    }
+    #banner {
+        margin-top: 1rem;
+        padding: 15px;
+    }
+    #banner p {
+        font-size: .8rem;
+        line-height: 20px;
+        padding: 0 1px;
+    }
+    #features {
+        padding-bottom: 4em;
+    }
+    #features .specials h2 {
+        font-size: 1.4rem;
+        margin: .6em 0 1.3em 0;
+    }
+    #features .row {
+        display: block;
+    }
+    .row .col {
+        width: 100%;
+        text-align: center;
+    }
+    .image.featured {
+        margin: 0 auto;
+        min-width: 205px;
+        min-height: 250px;
+    }
+    .image img {
+        min-width: 205px;
+        min-height: 250px;
+    }
+    #features .col header {
+        font-size: .8rem;
+        margin: -.5em 0 -1.1em 0em;
+    }
+    #features .col p {
+        font-size: 1rem;
+        margin-bottom: 2rem;
+    }
+    #features .menu-btn {
+        padding: 2em 0 0 0;
+    }
+    #testimonials {
+        padding: 3.5em 1em 1.5em 1rem;
+    }
+    #testimonials .container h2 {
+        font-size: 1.5rem;
+    }
+    #form {
+        padding: 3em 0 2.5em;
+    }
+    #form .form-header {
+        margin: 0 0 2.5em 0;
+    }
+    #form .form-header h1{
+        font-size: 1.6rem;
+        padding: 0 1rem;
+        margin: 0 auto;
+    }
+    #form .flex-container .flex-child.info {
+        width: 14.5rem;
+        margin: 0 auto;
+        padding: 0;
+    }
+    #form .info .icons ul li {
+        font-size: .85rem;
+    }
+    #form .info .icons ul li:nth-child(1) {
+        margin: -7px 0 0 0;
+    }
+    #form .info .icons ul li:nth-child(2) {
+        margin: 39px 0 0 0;
+    }
+    #form .info .icons ul li:nth-child(3) {
+        margin: 10px 0 0 0;
+    }
+    #form .info .icons ul li {
+        font-size: .9rem;
+    }
+    #form .flex-container .info .details ul {
+        padding-left : .7em;
+    }
+    #form .info .details ul li {
+        font-size: 1rem;
+        margin: 0 auto;
+        line-height: 16px;
+    }
+    #form .info .details ul li:nth-child(1) {
+        margin: 0 0 -5px 0;
+    }
+    #form .info .details ul li:nth-child(2) {
+        margin: 0 0 -5px 0;
+    }
+    #form .info .details ul li:nth-child(3) {
+        margin: 0 0 0 0;
+    }
+    #form .form .form-list li .name, #form .form .form-list li .email{
+        width: 14rem;
+        height: 2em;
+    }
+    #form .form .form-list li textarea {
+        width: 14rem !important;
+        height: 13em;
+        max-width: 14rem !important;
+    }
+    #footer {
+        padding: 0px 9px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 20px;
+        font-size: 10px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 13px;
+    }
 }
