--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -37,14 +37,10 @@ body {
     #header .nav-area .flex-nav .top-nav {
         display: inline-block;
         position: relative;
-        /* border: 1px solid brown; */
-        /* right: -6em; */
         margin: 10px 20px 10px 0;
-        /* padding: 0; */
     }
 
     #header .nav-area .flex-nav .top-nav ul {
-        /* border: 1px solid floralwhite; */
         display: inline-block;
         position: relative;
         margin: 0 auto;
@@ -182,37 +178,6 @@ body {
 		width: 70em;
 	}
 
-    @media screen and (max-width: 1680px) {
-
-			.container {
-				width: 68em;
-			}
-
-		}
-
-		@media screen and (max-width: 1280px) {
-
-			.container {
-				width: calc(100% - 80px);
-			}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.container {
-				width: calc(100% - 100px);
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.container {
-				width: calc(100% - 40px);
-			}
-
-		}
 /* -------------- Menu --------------- */
 /* --- TITLE */
 #menu {
@@ -394,4 +359,305 @@ body {
     right: 0;
     font-size: 44px;
     color: #d4d4d4;
+}
+
+/* Laptops */
+@media only screen and (min-width: 1024px) {
+    #check, .checkBtn {
+        display: none;
+    }
+}
+
+/* Tablets */
+@media only screen and (min-width: 1024px) {
+    #check, .checkBtn {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    #header .nav-area .flex-nav .top-nav {
+        display: none;
+        /* width: 0; */
+    }
+    .top-nav ul li a {
+        display: none;
+        padding: 0;
+        margin: 0 auto;
+    }
+    .top-nav ul li span {
+        display: none;
+    }
+    #header .nav-area .bottom-nav {
+        display: inline-block;
+        width: 100%;
+    }
+    .bottom-nav .left-logo {
+        float: left;
+        position: relative;
+        right: 20px;
+        /* display: contents; */
+    }
+    .flex-nav .bottom-nav .mn-nav {
+        border-top: none;
+        flex: none !important;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -110% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 80px !important;
+        margin: 50px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    .master-nav li a:hover {
+        background: none !important;
+        color: rgb(59, 42, 39) !important;
+    }
+    .checkBtn {
+        font-size: 30px;
+        color: whitesmoke;
+        float: right;
+        line-height: 80px;
+        margin-right: 40px;
+        cursor: pointer;
+        z-index: 10;
+    }
+    #check {
+        display: none;
+    }
+    #check:checked ~ .mn-nav.options ul {
+        right: 0 !important;
+    }
+    #menu .title-area h1 {
+        font-size: 3em;
+    }
+    #menu .title-area .wheat-images .wheat-left img, #menu .title-area .wheat-images .wheat-right img {
+        max-width: 22em;
+    }
+    #menu .menu-line {
+        top: 48em;
+    }
+    #footer {
+        padding: 5px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 25px;
+        font-size: 15px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 40px;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        /* font-size: 14px; */
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 35px;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    #menu .title-area h1 {
+        font-size: 2.7em;
+    }
+    #menu .title-area .wheat-images .wheat-left img, #menu .title-area .wheat-images .wheat-right img {
+        max-width: 20em;
+    }
+    #menu .menu-line {
+        top: 46.5em;
+    }
+}
+
+/* Mobile */
+@media only screen and (max-width: 768px) {
+    .bottom-nav .mn-nav .site-logo {
+        top: 8px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 2.1rem;
+    }
+    #menu .container {
+        margin-top: -22em;
+    }
+    #menu .title-area h1 {
+        top: 2.9em;
+        font-size: 2.1em;
+    }
+    #menu .title-area .wheat-images .wheat-left img, #menu .title-area .wheat-images .wheat-right img {
+        max-width: 15.3em;
+    }
+    #menu .menu-line {
+        top: 45.8em;
+    }
+    #menu .layout {
+        padding-top: 3em;
+    }
+    #menu .layout .menu-title h2 {
+        font-size: 1.4em;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 24px;
+        font-size: 13.8px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    #menu .container {
+        margin-top: -21em;
+    }
+    #menu .container .title-area {
+        margin-top: -2em;
+    }
+    #menu .title-area h1 {
+        top: 4.1em;
+        font-size: 1.5em;
+    }
+    #menu .title-area .wheat-images {
+        margin-top: 1em !important;
+    }
+    #menu .title-area .wheat-images .wheat-left img, #menu .title-area .wheat-images .wheat-right img {
+        max-width: 13em;
+    }
+    #menu .menu-line {
+        top: 40.5em;
+        /* height: 250px; */
+    }
+    #menu .layout {
+        padding-top: 2em;
+    }
+    #menu .layout .menu-title h2 {
+        font-size: 1.2em;
+    }
+}
+
+/* fix menu */
+@media only screen and (max-width: 500px) {
+    .checkBtn {
+        font-size: 24px;
+    }
+    .bottom-nav .mn-nav .site-logo {
+        top: 15px;
+    }
+    .bottom-nav .mn-nav li a.logo {
+        font-size: 1.7rem;
+    }
+    .bottom-nav .master-nav {
+        /* right: 20px !important; */
+        position: fixed !important;
+        width: 100% !important;
+        height: 100vh;
+        background: #d18072;
+        top: 80px !important;
+        right: -120% !important;
+        text-align: center;
+        z-index: 1;
+        transition: all .5s;
+    }
+    .bottom-nav .master-nav li {
+        display: block !important;
+        line-height: 60px !important;
+        margin: 40px 0px;
+        padding-right: 0 !important;
+    }
+    .master-nav li a {
+        font-size: 20px !important;
+    }
+    #menu .container {
+        margin-top: -21em;
+        padding-bottom: 9em;
+    }
+    #menu .container .title-area {
+        margin-top: 5em;
+    }
+    #menu .title-area h1 {
+        top: 3.2em;
+        font-size: 1.15em;
+    }
+    #menu .title-area .wheat-images {
+        margin-top: 4em;
+    }
+    #menu .title-area .wheat-images .wheat-left img, #menu .title-area .wheat-images .wheat-right img {
+        max-width: 7em;
+    }
+    #menu .menu-line {
+        top: 32.2em;
+        height: 240px;
+        border-left: 1px solid black !important;
+        width: 0;
+        z-index: 0;
+    }
+    #menu .layout {
+        padding-top: 1em;
+    }
+    .layout .menu-titles {
+        margin-bottom: -25px;
+    }
+    #menu .layout .menu-title h2 {
+        font-size: .9em;
+    }
+    .row-1 .item-name-lt ul, .row-1 .item-name-rt ul {
+        font-size: .8em;
+    }
+    #footer {
+        padding: 0px 12px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 22px;
+        font-size: 13px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    #footer {
+        padding: 0px 8px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 22px;
+        font-size: 10px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 17px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    #footer {
+        padding: 0px 9px;
+    }
+    #footer .flex-container .name p {
+        margin-top: 20px;
+        font-size: 10px;
+    }
+    #footer .flex-container .payments .accepted-cards li {
+        font-size: 13px;
+    }
 }
